# archon

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: escalation_registry.py  limiter.py  pubsub.py  routes.py  schemas.py
backend/app/core/: logging.py  observability.py  settings.py
backend/app/graph/: agent.py  build.py  memory.py  react_agent.py  state.py  supervisor.py
backend/app/guardrails/: disclosure.py  groundedness.py  injection.py  pii.py
backend/app/llm/: factory.py  prompts.py  text.py
backend/app/rag/: ingest.py  retriever.py  vectorstore.py
backend/app/tools/: knowledge_base.py  mock_account.py
backend/data/knowledge_base/: account-management.md  (+8 more)
backend/evals/: datasets.py  evaluators.py  run.py  targets.py
backend/scripts/: chat_cli.py  demo_langchain.py  env_check.py  ingest.py  seed_data.py
backend/tests/: test_agent.py  test_api.py  test_escalation_registry.py  test_evals.py  test_graph_guarded.py  test_guardrails.py  test_hardening.py  test_llm_factory.py  test_observability.py  test_rag.py  test_supervisor.py  test_text.py
docs/: 00-setup.md  01-langchain-basics.md  02-rag-pipeline.md  03-langgraph-agents.md  04-supervisor-routing.md  05-guardrails.md  06-langsmith-observability.md  07-evaluation.md  08-backend-api.md  09-frontend.md  10-deployment.md
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentConsole.tsx  Badges.tsx  Chat.tsx  Icons.tsx  MessageBubble.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  types.ts
(+6 files in other folders)
