[project]
name = "archon"
version = "0.1.0"
description = "Automated Customer Support & Intelligent Routing Agent (local, zero-cost, LangChain/LangGraph/LangSmith)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- LangChain / LangGraph / LangSmith core ---
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.1.130",
    # --- Local models via Ollama ---
    "langchain-ollama>=0.2.0",
    # --- RAG / vector store (local, free) ---
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.0",
    # --- Guardrails: PII detection/redaction (OSS) ---
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    # --- API layer ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "slowapi>=0.1.9",
    # --- Config / utils ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]
filterwarnings = [
    # Starlette's TestClient warns about httpx internals; not actionable for us.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
